# VE482-p2

./: README.md
src/: CMakeLists.txt  main.cpp
src/db/: Database.cpp  Database.h  Table.cpp  Table.h
src/query/: Query.cpp  Query.h  QueryBuilders.cpp  QueryParser.cpp  QueryResult.h
src/query/data/: AddQuery.cpp  AddQuery.h  CountQuery.cpp  CountQuery.h  DeleteQuery.cpp  DeleteQuery.h  DuplicateQuery.cpp  DuplicateQuery.h  MaxQuery.cpp  MaxQuery.h  MinQuery.cpp  MinQuery.h  SelectQuery.cpp  SelectQuery.h  SubQuery.cpp  SubQuery.h  SumQuery.cpp  SumQuery.h  SwapQuery.cpp  SwapQuery.h
src/query/management/: ClearTableQuery.cpp  ClearTableQuery.h  CopyTableQuery.cpp  CopyTableQuery.h
